# cx

./: .appveyor.yml  .clang-format  .clang-tidy  .gitignore  .gitmodules  .travis.yml  .uncrustify.cfg  CMakeLists.txt  LICENSE.txt  README.md  book.json  classes-and-structs.md  control-flow.md  functions.md  operators.md  setup-build-macos.sh  setup-build-ubuntu.sh  setup-build.sh  variables.md
.github/workflows/: build.yml  cmake.yml
doc/: doxyfile  internals.md  spec.md
docs/: CODE_OF_CONDUCT.md  build-website.sh  commands.md  compiler-internals.md  compiler-manual.md  cx.css  cx.js  delta.css  delta.js  design.md  doxyfile  editor.js  index.css  index.html  internals.md  spec.md  template.html  toc.html  top-nav.html
docs/book/: README.md  SUMMARY.md  arrays.md  builtin-types.md  classes-and-structs.md  control-flow.md  design.md  enum-types.md  functions.md  generics.md  hello-world.md  interfaces.md  introduction.md  iterators.md  list.md  lists.md  low-level-programming.md  nullable-types.md  operators.md  pointers.md  ranges.md  std.md  strings.md  structs.md  variables-and-constants.md  variables.md
docs/lib/: codemirror.css  codemirror.js
docs/spec/: Makefile  README.md  decl.tex  expr.tex  lex.tex  spec.tex  stdlib.tex  stmt.tex  type.tex
examples/: brainfuck.cx  brainfuck.delta  build_examples.py  build_examples.sh  mandelbrot.cx  tree.cx
examples/asteroids/: Makefile  README.md  asteroid.cx  asteroid.delta  build.bat  game-state.cx  game-state.delta  main.cx  main.delta  missile.cx  missile.delta  player.cx  player.delta  vector2.delta
examples/inputs/: bench.b
examples/opengl/: Makefile  fragment_shader.frag  opengl.cx  vertex_shader.vert
scripts/: ci-update-website.sh  format.sh  pre-commit  update-delta-sandbox.sh
src/: pch.h
src/ast/: CMakeLists.txt  ast-print.cpp  ast-print.h  ast-printer.cpp  ast-printer.h  ast.h  ast_printer.cpp  ast_printer.h  decl.cpp  decl.h  expr.cpp  expr.h  location.h  mangle.cpp  mangle.h  module.cpp  module.h  srcloc.h  stmt.cpp  stmt.h  token.cpp  token.h  type-resolver.cpp  type-resolver.h  type.cpp  type.h
src/backend/: ir.cpp  ir.h  irgen-decl.cpp  irgen-expr.cpp  irgen-stmt.cpp  irgen.cpp  irgen.h  llvm.cpp  llvm.h
src/cgen/: CMakeLists.txt  codegen.cpp  codegen.h
src/delta/: CMakeLists.txt  main.cpp
src/driver/: CMakeLists.txt  clang.cpp  clang.h  clang_cc1_main.cpp  clang_driver.cpp  clang_driver.h  driver.cpp  driver.h  main.cpp  repl.cpp  repl.h  utility.h
src/irgen/: CMakeLists.txt  irgen-decl.cpp  irgen-expr.cpp  irgen-stmt.cpp  irgen.cpp  irgen.h  irgenExpr.cpp  mangle.cpp  mangle.h
src/package-manager/: CMakeLists.txt  manifest.cpp  manifest.h  package-manager.cpp  package-manager.h
src/parser/: CMakeLists.txt  lex.cpp  lex.h  lexer.cpp  lexer.l  main.cpp  operators.cpp  operators.h  parse.cpp  parse.h  parser.y  token.cpp  token.h
src/sema/: CMakeLists.txt  c-import.cpp  c-import.h  null-analyzer.cpp  null-analyzer.h  typecheck-decl.cpp  typecheck-expr.cpp  typecheck-stmt.cpp  typecheck.cpp  typecheck.h  typecheckExpr.cpp
src/support/: CMakeLists.txt  utility.cpp  utility.h
std/: Array.delta  ArrayIterator.cx  ArrayIterator.delta  ArrayRef.cx  ArrayRef.delta  Box.cx  ByteIterator.delta  ClosedRange.cx  ClosedRange.delta  ClosedRangeIterator.cx  ClosedRangeIterator.delta  Comparable.cx  Comparable.delta  EnumeratedIterator.cx  EnumeratedIterator.delta  FileStream.cx  FileStream.delta  Hashable.delta  Iterable.delta  Iterator.cx  Iterator.delta  LineIterator.cx  LineIterator.delta  List.cx  List.delta  Map.cx  Map.delta  MapIterator.cx  MapIterator.delta  Optional.cx  Optional.delta  OrderedMap.cx  OrderedMap.delta  OrderedMapIterator.cx  OrderedMapIterator.delta  OrderedSet.cx  OrderedSet.delta  OrderedSetIterator.cx  OrderedSetIterator.delta  Printable.cx  (+40 more)
std/io/: ByteIterator.delta  FileStream.delta  InputFileStream.delta  InputStream.delta  LineIterator.delta  OutputFileStream.delta  OutputStream.delta  stdio.delta
std/os/: gnu.cx  gnu.delta  windows.cx  windows.delta
stdlib/: Array.delta  ArrayIterator.delta  ArrayRef.delta  ClosedRange.delta  ClosedRangeIterator.delta  Comparable.delta  Copyable.delta  EnumeratedIterator.delta  Hashable.delta  Iterator.delta  Map.delta  MapIterator.delta  OrderedMap.delta  OrderedMapIterator.delta  OrderedSet.delta  OrderedSetIterator.delta  Printable.delta  Queue.delta  Range.delta  RangeIterator.delta  Set.delta  SetIterator.delta  String.delta  StringIterator.delta  StringRef.delta  UniquePtr.delta  algorithm.delta  allocate.delta  bool.delta  char.delta  compare.delta  error.delta  floats.delta  integers.delta  libc.delta  math.delta  print.delta  string.delta
stdlib/io/: ByteIterator.delta  FileStream.delta  InputFileStream.delta  InputStream.delta  LineIterator.delta  OutputFileStream.delta  OutputStream.delta  stdio.delta
stdlib/os/: gnu.delta  windows.delta
test/: CMakeLists.txt  cat  check-snapshots  check_exit_status  check_exit_status.sh  check_matches_snapshot  compile_and_run  helpers.sh  lit.cfg  not  true
test/cgen/: CMakeLists.txt  compile.sh  simple-cgen-test.delta
test/driver/: c-header-import-not-found.cx  c-header-import-not-found.delta  c-header-import-not-found.delta.output  c-header-with-error.h  delta-run-segfault.delta  delta-run-unwrap-fail-windows.delta  delta-run-unwrap-fail.delta  error-in-c-header-parsing.cx  error-in-c-header-parsing.delta  error-in-c-header-parsing.delta.output  repl-compile-error.delta  repl-pure-expression.delta  run-unwrap-fail.cx
test/irgen/: CMakeLists.txt  allocas-in-multiple-initializers.delta  allocas-in-multiple-initializers.delta.ll  and-or.delta  and-or.delta.ll  argument-auto-reference.delta  argument-auto-reference.delta.ll  array-literal-non-constant-elements.delta  array-literal-non-constant-elements.delta.ll  array-literal.delta  array-literal.delta.ll  array-of-string-literals.delta  array-of-string-literals.delta.ll  array-pointer-auto-wrap.delta  array-pointer-auto-wrap.delta.ll  array-ref-auto-reference.delta  array-ref-auto-reference.delta.ll  assert.delta  (+376 more)
(+2087 files in other folders)
