file(GLOB SOURCES *.h *.cpp)
add_executable(delta ${SOURCES})
target_link_libraries(delta deltaParser deltaSema deltaIRGen deltaSupport)
llvm_map_components_to_libnames(LLVM_LIBS native mc lineeditor executionengine interpreter)
target_link_libraries(delta ${LLVM_LIBS})
add_definitions(-DDELTA_ROOT_DIR="${PROJECT_SOURCE_DIR}")
